--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "24a8257b",
    "metadata": {},
    "outputs": [],
@@ -10,11 +10,45 @@
     "def add_two_numbers(a, b):\n",
     "    return a + b"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8f192ad7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of 3 and 5 is: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = add_two_numbers(3, 5)\n",
+    "print(f\"The sum of 3 and 5 is: {sum}\")\n",
+    "# This script defines a function to add two numbers and prints the result."
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "env1",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
