chore: bug removed.

--- a/notebooks/sierraleone_eda.ipynb
+++ b/notebooks/sierraleone_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "ad025495",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "ed007bd0",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "4       NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "a5bd0cce",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
        "max        70.400000       NaN  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "17735414",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "b161d9d4",
    "metadata": {},
    "outputs": [
@@ -563,19 +563,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a4adfd67",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Drop missing values columns (commnts column)\n",
     "# data = data.drop(cols_missing_over_5pct.index, axis=1)\n",
-    "data.drop(columns=['comments'], inplace=True)"
+    "data.drop(columns=['Comments'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "4b50cf00",
    "metadata": {},
    "outputs": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "ca26341a",
    "metadata": {},
    "outputs": [],
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "088e4a32",
    "metadata": {},
    "outputs": [],
@@ -635,13 +635,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "b8df2792",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export cleaned data\n",
-    "data_cleaned.to_csv('../data/sierraleone-bumbuna_cleaned.csv', index=False)"
+    "data_cleaned.to_csv('../data/sierraleone_clean.csv', index=False)"
    ]
   },
   {
