--- a/notebooks/togo_eda.ipynb
+++ b/notebooks/togo_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "id": "ad025495",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "ed007bd0",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "4       NaN  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "id": "ea96c1dc",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "(525600, 19)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "id": "a5bd0cce",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
        "max        94.600000       NaN  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "id": "17735414",
    "metadata": {},
    "outputs": [
@@ -547,7 +547,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "id": "b161d9d4",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "id": "81196162",
    "metadata": {},
    "outputs": [],
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "id": "4b50cf00",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "id": "95f30968",
    "metadata": {},
    "outputs": [
@@ -850,7 +850,7 @@
        "(525600, 33)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "id": "6e20a54a",
    "metadata": {},
    "outputs": [],
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "id": "77c8de2a",
    "metadata": {},
    "outputs": [
@@ -883,7 +883,7 @@
        "(516349, 33)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,13 +909,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "id": "b8df2792",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export cleaned data\n",
-    "data_cleaned.to_csv('../data/togo_dapaong_cleaned.csv', index=False)"
+    "data_cleaned.to_csv('../data/togo_clean.csv', index=False)"
    ]
   },
   {
